# msl-achievements

./: .gitignore  README.md  pyproject.toml
resources/po/: achievement.resource  achievements.resource
resources/shared/: setup_teardown.resource
tasks/: get_achievements.robot
